test_suite5/ALAN/test_suite/alan-2022-examples/failing/001950_mutation.alan
source B begin function leave end
